tests/ValidProofs/conjE2.fitch
|x Ōł¦ y
|---
|y (Ōł¦E2) 1