tests/InvalidRules/implE%3.fitch
|P(x) → Q(y)
|P(y)
|---
|Q(y) (→E) 2,1
